--- a/biography.html
+++ b/biography.html
@@ -15,7 +15,7 @@
         <h1>Biography</h1>
     </header>
     <section class="current-state">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus consectetur officia voluptatum perferendis quasi voluptatibus eligendi ipsam nemo tempora non, error laborum doloremque inventore! Quas debitis rem repudiandae odio ipsum!</p>
+        <p>Recent investment specialist working with Russian Equity market, I am now undertaking a new path as a full-stack developer. Never stop growing and experiencing the world!</p>
         <img src="images/bio-pic.jpg" alt="graduation photo">
     </section>
     <section class="bio">
