--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     </nav>
     <header>
         <h1>Memory Alley</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus consectetur officia voluptatum perferendis quasi voluptatibus eligendi ipsam nemo tempora non, error laborum doloremque inventore! Quas debitis rem repudiandae odio ipsum!</p>
+        <p>Here is a memory lane of my travels over the last few years. As someone wise on the internet said, jobs will fill your pocket, travelling will fill your soul.</p>
     </header>
     <section class="gallery">
         <figure>
