--- a/biography.html
+++ b/biography.html
@@ -15,8 +15,8 @@
         <h1>Biography</h1>
     </header>
     <section class="current-state">
-        <p>Recent investment specialist working with Russian Equity market, I am now undertaking a new path as a full-stack developer. Never stop growing and experiencing the world!</p>
-        <img src="images/bio-pic.jpg" alt="graduation photo">
+        <p>Recent investment specialist working with Russian Equity Market, I am now undertaking a new path as a full-stack developer. Never stop growing and experiencing the world!</p>
+        <img src="images/bio-pic.jpg" alt="graduation sneak peak">
     </section>
     <section class="bio">
         <h2>Education</h2>
