--- a/biography.html
+++ b/biography.html
@@ -21,14 +21,14 @@
     <section class="bio">
         <h2>Education</h2>
         <ul>
-            <li>2022-Present Experis Academy, Israel: <p>Full-stack Developer</p></li>
-            <li>2016-2018 Imerial College London, UK: <p> MSc Financial Engineering and Risk Management</p></li>
-            <li>2013-2016 Cass Business School, UK: <p> BSc(Hons) Investment and Financial Risk Management</p></li>
+            <li>2022 - Present Experis Academy, Israel: <p>Full-stack Developer</p></li>
+            <li>2016 - 2018 Imerial College London, UK: <p> MSc Financial Engineering and Risk Management</p></li>
+            <li>2013 - 2016 Cass Business School, UK: <p> BSc(Hons) Investment and Financial Risk Management</p></li>
         </ul>
         <h2>Work Experience</h2>
         <ul>
-            <li>2021-2022 TKB Investment Partners, Russia: <p>Investment Specialist</p></li>
-            <li>2019-2021 TKB Investment Partners, Russia: <p>Junior Investment Specialist</p></li>
+            <li>2021 - 2022 TKB Investment Partners, Russia: <p>Investment Specialist</p></li>
+            <li>2019 - 2021 TKB Investment Partners, Russia: <p>Junior Investment Specialist</p></li>
         </ul>
     </section>
     <footer>
