--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="gallery.html">Memory Alley</a></li>
             <li><a href="articles.html">Articles</a></li>
             <li><a href="izyum.html">Izyum</a></li>
+            <li><a href="contact.html">Contact me</a></li>
         </ul>
     </nav>
     <main>
@@ -29,11 +30,10 @@
         <img src="images/main-pic.JPG" alt="profile picture">
     </main>
     <section class="contacts">
-        <h3>Contacts:</h3>
+        <h3>Socials:</h3>
         <ul>
             <li><a href="https://www.instagram.com/sashencass/?hl=en">Instagram</a></li>
             <li><a href="https://www.facebook.com/skuznetsova2">Facebook</a></li>
-            <li>andymar4ik@gmail.com</li>
         </ul> 
     </section>
     <footer>
