finacl touch-ups

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section class="welcome-msg">
             <h2>Welcome to my website</h2>
-            <p>I am currently located in Russia, St. Petersburg awaiting for the move to Tel Aviv to start a new chapter as a full-stack developer.</p>
+            <p>I am currently located in Russia, St. Petersburg. Awaiting for the move to Tel Aviv to start a new chapter as a full-stack developer.</p>
             <p>This website is a quick snapshop of my life. You can see my biography, memories of the favourite travels and have a taste of the articles I have been working on during the financial part of my life journey. And, most importantly, pictures of my cat, Izyum.</p>
         
         </section>
